--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
         <div class="fix-12-12">
           <ul class="flex fixedSpaces verticalCenter reverse">
             <li class="col-7-12 left middle">
-              <h1 class="big ae-1 fromLeft">Design is what you make of the surprises</h1>
-              <div class="ae-2 fromLeft"><p class="hero">The sudden hunch, the creative leap of mind that “sees” in a flash how to solve a problem in a simple way, is something quite&nbsp;different.</p></div>
-              <a class="button pink ae-3 fromCenter">Start free trial</a><a class="button white ae-4 fromCenter">Learn more</a>
+              <h1 class="big ae-1 fromLeft">Håndplukket inspiration til nemmere hverdagsmad </h1>
+              <div class="ae-2 fromLeft"><p class="hero">Vi har hos FoodTV i samarbejde med alle vores kokke udarbejdet en FoodBOX, som giver dig inspiration til nemmere og sjovere madlavning. Hver måned får du en unikt sammensat kasse med håndplukkede varer fra månedens kok. Boksen indeholder det, der inspirerer kokkene i deres hverdag samt ting, de ikke kan undvære i køkkenet.</p></div>
+              <a class="button pink ae-3 fromCenter">Okay, jeg er på!</a><a class="button white ae-4 fromCenter">Hvad er der i den kasse?</a>
             </li>
             <li class="col-5-12">
               <img class="ae-4" width="404" src="assets/img/iphones-34.png" alt="iPhones Thumbnail" data-action="zoom"/>
@@ -164,40 +164,33 @@
       <div class="wrap">
       
         <div class="fix-12-12">
-          <h1 class="ae-1 fromLeft margin-bottom-3">Look for a solution</h1>
+          <h1 class="ae-1 fromLeft margin-bottom-3">Bag med Ditte Julie (Juni-kassen)</h1>
           <div class="popupTrigger clearBoth ae-2 fromRight" data-popup-id="89-2">
             <span class="ae-5 fromCenter">
               <span class="button play white button-89">
                 <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#play"></use></svg>
               </span>
             </span>
-            <span class="text-89 uppercase">See Slides in action</span>
+            <span class="text-89 uppercase">Hør Ditte Julie fortælle om hvad hun har udvalgt til dig</span>
           </div>
           <ul class="flex later margin-top-4 left">
             <li class="col-6-12 box-89">
               <div class="quoteBubble ae-4 fromLeft">
-                <p class="cropBottom light">The critical distinction between a craftsman and an expert is what happens after a sufficient level of expertise has been achieved. The expert will do everything she can to remain wedded.</p>
+                <p class="cropBottom light">Jeg elsker at bage og håber at jeg kan inspirere dig til at prøve noget nyt. I juni skal du prøve dig med en lækker moussekage og nogle nemme chokoladeboller.</p>
               </div>
-              <div class="quoteName ae-6 fromRight">John Connor<span class="quoteTitle">, Creative Director @Designmodo</span></div>
+              <div class="quoteName ae-6 fromRight">Ditte Julie Jensen<span class="quoteTitle">, kagebogsforfatter og kendt fra Den Store Bagedyst</span></div>
             </li>
             <li class="col-6-12">
               <ul class="flex fromBottomRight fixedSpaces">
                 <li class="col-6-12 ae-6">
-                  <h3>Mockup</h3>
-                  <p class="small">Select premade adjustment layers with ease.</p>
+                  <h3>Til moussekagen får du..</h3>
+                  <p class="small">Alle ingredienser undtaget æg og mælk. Derudover får du også en lækker dejskraber og mit særlige kageplast der sikrer en skarp kant på kagen.</p>
                 </li>
                 <li class="col-6-12 ae-7">
-                  <h3>Layers</h3>
-                  <p class="small">Open a smart object, paste your design and save.</p>
+                  <h3>Til chokoladebollerne får du..</h3>
+                  <p class="small">Alle ingredienser undtaget æg og mælk. Jeg har også fundet en lækker skål fra Rosendahl til at putte bollerne i.</p>
                 </li>
-                <li class="col-6-12 ae-8">
-                  <h3>Branding</h3>
-                  <p class="small">Select a background, drop items that you like.</p>
-                </li>
-                <li class="col-6-12 ae-9">
-                  <h3>Present</h3>
-                  <p class="small">Create items by pasting your design, text or logo.</p>
-                </li>
+
                 
               </ul>
             </li>
