--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <li class="col-7-12 left middle">
               <h1 class="big ae-1 fromLeft">Fra video-opskrifter til madlavningskasser</h1>
               <div class="ae-2 fromLeft"><p class="hero">Vi startede FoodTV.dk for et par år siden og har nu 80.000 glade brugere. Vi vil nu tage skridtet videre fra video-opskrifterne og hver måned sammensætte en kasse i samarbejde med vores kokke. FoodBOX indeholder det, der inspirerer kokkene i deres hverdag samt ting, de ikke kan undvære i køkkenet.</p></div>
-              <a class="button pink ae-3 fromCenter">Okay, jeg er på!</a><a class="button white ae-4 fromCenter" href="#kassen">Hvad er der i den kasse?</a>
+              <a class="button pink ae-3 fromCenter" href="javascript:void(0)" data-cb-type="checkout" data-cb-plan-id="foodbox">Okay, jeg er på!</a><a class="button white ae-4 fromCenter" href="#kassen">Hvad er der i den kasse?</a>
             </li>
             <li class="col-5-12">
               <img class="ae-4" width="669" src="assets/img/mobil.png" alt="iPhones Thumbnail" data-action="zoom"/>
@@ -201,7 +201,7 @@
             </li>
             <li class="col-6-12 left ae-1 image-62">
               <img class="macbook-62 margin-bottom-3" src="assets/img/kassen.png" data-action="zoom" width="550" alt="Kassen"/>
-              <div class="margin-top-5" style="text-align:center;padding-left:50px;"><a class="button pink ae-3 fromCenter">Prøv kassen</a><a class="button white ae-4 fromCenter" href="#suppliers">Er det kvalitet?</a></div>
+              <div class="margin-top-5" style="text-align:center;padding-left:50px;"><a class="button pink ae-3 fromCenter" href="javascript:void(0)" data-cb-type="checkout" data-cb-plan-id="foodbox">Prøv kassen</a><a class="button white ae-4 fromCenter" href="#suppliers">Er det kvalitet?</a></div>
             </li>
           </ul>
         </div>
