--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             </li>
             <li class="col-6-12 left ae-1 image-62">
               <img class="macbook-62 margin-bottom-3" src="assets/img/kassen.png" data-action="zoom" width="550" alt="Kassen"/>
-              <div class="margin-top-5" style="text-align:center;padding-left:50px;"><a class="button pink ae-3 fromCenter" href="javascript:void(0)" data-cb-type="checkout" data-cb-plan-id="foodbox">Prøv kassen</a><a class="button white ae-4 fromCenter" href="#suppliers">Er det kvalitet?</a></div>
+              <div class="margin-top-5" style="text-align:center;padding-left:50px;"><a href="javascript:void(0)" data-cb-type="checkout" data-cb-plan-id="foodbox" class="button pink ae-3 fromCenter">Prøv kassen</a><a class="button white ae-4 fromCenter" href="#suppliers">Er det kvalitet?</a></div>
             </li>
           </ul>
         </div>
