--- a/index.html
+++ b/index.html
@@ -228,129 +228,46 @@
             <li class="col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
               <div class="table wide equalElement ae-3">
                 <div class="cell">
-                  <img width="89" src="assets/img/bbc.png" alt="BBC"/>
+                  <img width="115" src="assets/img/peter.png" alt="Peter Larsen Kaffe"/>
                 </div>
               </div>
             </li>
             <li class="col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
               <div class="table wide equalElement ae-4">
                 <div class="cell">
-                  <img width="115" src="assets/img/google.png" alt="Google"/>
+                  <img width="150" src="assets/img/summerbird.png" alt="Summerbird"/>
                 </div>
               </div>
             </li>
             <li class="col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
               <div class="table wide equalElement ae-5">
                 <div class="cell">
-                  <img width="42" src="assets/img/apple.png" alt="Apple"/>
+                  <img width="150" src="assets/img/creuset.png" alt="Le Creuset"/>
                 </div>
               </div>
             </li>
             <li class="col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
               <div class="table wide equalElement ae-6">
                 <div class="cell">
-                  <img width="124" src="assets/img/canon.png" alt="Canon"/>
+                  <img width="124" src="assets/img/electrolux.png" alt="Electrolux"/>
                 </div>
               </div>
             </li>
             <li class="col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
               <div class="table wide equalElement ae-7">
                 <div class="cell">
-                  <img width="83" src="assets/img/nike.png" alt="Nike"/>
+                  <img width="130" src="assets/img/rosendahl.png" alt="Rosendahl"/>
                 </div>
               </div>
             </li>
             <li class="col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
               <div class="table wide equalElement ae-8">
                 <div class="cell">
-                  <img width="153" src="assets/img/greenpeace.png" alt="Green Peace"/>
+                  <img width="140" src="assets/img/jacobsen.png" alt="Jacobsen"/>
                 </div>
               </div>
             </li>
-            <li class="col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
-              <div class="table wide equalElement ae-3">
-                <div class="cell">
-                 <img width="125" src="assets/img/facebook.png" alt="Facebook"/>
-                </div>
-              </div>
-            </li>
-            <li class="col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
-              <div class="table wide equalElement ae-4">
-                <div class="cell">
-                  <img width="85" src="assets/img/audi.png" alt="Audi"/>
-                </div>
-              </div>
-            </li>
-            <li class="col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
-              <div class="table wide equalElement ae-5">
-                <div class="cell">
-                  <img width="52" src="assets/img/warner-bros.png" alt="Warner Bros"/>
-                </div>
-              </div>
-            </li>
-            <li class="col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
-              <div class="table wide equalElement ae-6">
-                <div class="cell">
-                  <img width="155" src="assets/img/microsoft.png" alt="Microsoft"/>
-                </div>
-              </div>
-            </li>
-            <li class="col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
-              <div class="table wide equalElement ae-7">
-                <div class="cell">
-                  <img width="116" src="assets/img/coca-cola.png" alt="Coca Cola"/>
-                </div>
-              </div>
-            </li>
-            <li class="col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
-              <div class="table wide equalElement ae-8">
-                <div class="cell">
-                  <img width="133" src="assets/img/reebok.png" alt="Reebok"/>
-                </div>
-              </div>
-            </li>
-            <li class="col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
-              <div class="table wide equalElement ae-3">
-                <div class="cell">
-                  <img width="67" src="assets/img/adidas.png" alt="Adidas"/>
-                </div>
-              </div>
-            </li>
-            <li class="col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
-              <div class="table wide equalElement ae-4">
-                <div class="cell">
-                  <img width="116" src="assets/img/vimeo.png" alt="Vimeo"/>
-                </div>
-              </div>
-            </li>
-            <li class="col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
-              <div class="table wide equalElement ae-5">
-                <div class="cell">
-                  <img width="74" src="assets/img/nbc.png" alt="NBC"/>
-                </div>
-              </div>
-            </li>
-            <li class="col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
-              <div class="table wide equalElement ae-6">
-                <div class="cell">
-                  <img width="127" src="assets/img/sony.png" alt="Sony"/>
-                </div>
-              </div>
-            </li>
-            <li class="col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
-              <div class="table wide equalElement ae-7">
-                <div class="cell">
-                  <img width="65" src="assets/img/playstation.png" alt="PlayStation"/>
-                </div>
-              </div>
-            </li>
-            <li class="col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
-              <div class="table wide equalElement ae-8">
-                <div class="cell">
-                  <img width="125" src="assets/img/national-geographic.png" alt="National Geographic"/>
-                </div>
-              </div>
-            </li>
+   
           </ul>
         </div>
                 
