--- a/index.html
+++ b/index.html
@@ -296,16 +296,17 @@
         <div class="fix-12-12 margin-top-5">
           <ul class="grid grid-81 fixedSpaces equal equalMobile">
             <li class="col-6-12">
-              <div class="box-81 equalElement indigo left ae-3">
+                <div class="videoThumbnail noShadow wide cover equalElement popupTrigger ae-4" data-popup-id="81-0" style="background:url(assets/img/dittevideo.jpg);"></div>
+            </li>
+            <li class="col-6-12">
+                            <div class="box-81 equalElement left ae-3">
                 <p class="light ae-5">Jeg elsker at bage og håber at jeg kan inspirere dig til at prøve noget nyt. I juni skal du prøve dig med en lækker moussekage og nogle nemme chokoladeboller.</p>
                 <div class="author-81">
                   <p class="small bold ae-6">Ditte Julie Jensen</p>
                   <p class="small cropBottom ae-7">kendt fra Den Store Bagedyst</p>
                 </div>
               </div>
-            </li>
-            <li class="col-6-12">
-              <div class="videoThumbnail noShadow wide cover equalElement popupTrigger ae-4" data-popup-id="81-0" style="background:url(assets/img/dittevideo.jpg);"></div>
+              
             </li>
           </ul>
         </div>
