--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
 <!-- Slide 1 (#81) -->
 <section class="slide fade kenBurns">
-  <div class="content">
+  <div class="content" id="ditte">
     <div class="container">
       <div class="wrap">
       
