--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <div class="fix-12-12">
           <ul class="flex fixedSpaces verticalCenter reverse">
             <li class="col-7-12 left middle">
-              <h1 class="big ae-1 fromLeft">Fra video-opskrifter til madlavningskasser</h1>
+              <h1 class="big ae-1 fromLeft">Fra video-opskrifter til madlavnings-kasser</h1>
               <div class="ae-2 fromLeft"><p class="hero">Vi startede FoodTV.dk for et par år siden og har nu 80.000 glade brugere. Vi vil nu tage skridtet videre fra video-opskrifterne og hver måned sammensætte en kasse i samarbejde med vores kokke. FoodBOX indeholder det, der inspirerer kokkene i deres hverdag samt ting, de ikke kan undvære i køkkenet.</p></div>
               <a class="button pink ae-3 fromCenter" href="javascript:void(0)" data-cb-type="checkout" data-cb-plan-id="foodbox">Okay, jeg er på!</a><a class="button white ae-4 fromCenter" href="#kassen">Hvad er der i den kasse?</a>
             </li>
@@ -325,7 +325,7 @@
       <div class="wrap">
         <div class="fix-10-12">
           <div class="embedVideo popupContent">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/RY_BVNl8reY?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Yb6IGhLyJ44?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
         </div>
       </div>
