--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
           <ul class="flex verticalCenter reverse">
             <li class="col-6-12 left">
               <h1 class="ae-2">Håndplukkede lækkerier</h1>
-              <div class="ae-3"><p>Vi har inviteret nogle af landets bedste kokke til at vælge de bedste ingredienser og udstyr til deres favorit hverdagsmad.</p></div>
+              <div class="ae-3"><p>Vi har i samarbejde med foodtvs dedikerede kokke udvalgt de bedste ingredienser og udstyr, som de selv bruger i hverdagen.</p></div>
               <ul class="flex grid-62 later">
                 <li class="col-6-12 ae-4">
                   <i class="material-icons">local_dining</i>
@@ -202,12 +202,12 @@
                 <li class="col-6-12 ae-5">
                   <i class="material-icons">kitchen</i>
                   <h3>Ingredienser og udstyr</h3>
-                  <p class="small">Vi pakker de bedste råvarer og køkkenudstyr til dig så du nemt kan lave opskrifterne.</p>
+                  <p class="small">Vi pakker de bedste råvarer og køkkenudstyr til dig, så du nemt kan lave opskrifterne.</p>
                 </li>
                 <li class="col-6-12 ae-6">
                   <i class="material-icons">slideshow</i>
                   <h3>Opskrifter med video</h3>
-                  <p class="small">Altid et par opskrifter der passer til kassens indhold og link til video fra FoodTV.</p>
+                  <p class="small">Du får altid et par opskrifter der passer til kassens indhold og link til video fra FoodTV.</p>
                 </li>
                 <li class="col-6-12 ae-7">
                   <i class="material-icons">local_cafe</i>
@@ -317,7 +317,7 @@
             </li>
             <li class="col-6-12">
                             <div class="box-81 equalElement left ae-3">
-                <p class="light ae-5">Jeg elsker at bage og håber at jeg kan inspirere dig til at prøve noget nyt. I juni skal du prøve dig med en lækker moussekage og nogle nemme chokoladeboller.</p>
+                <p class="light ae-5">Jeg elsker at bage, og håber, at jeg kan inspirere dig til at prøve noget nyt. I juni skal du prøve dig med en lækker moussekage og nogle nemme chokoladeboller.</p>
                 <div class="author-81">
                   <p class="small bold ae-6">Ditte Julie Jensen</p>
                   <p class="small cropBottom ae-7">kendt fra Den Store Bagedyst</p>
@@ -363,7 +363,7 @@
           <div class="pad shadow margin-top-6 ae-3 ">
             <div class="price sourceSans ae-4">89 kr.</div>
             <h3 class="big ae-5">pr. måned (ingen binding)</h3>
-            <div class="ae-6"><p class="small">Du får altid værdi for over 850 kr. i kassen og det hele er nemt at gå til.</p></div>
+            <div class="ae-6"><p class="small">Du får altid værdi for over 850 kr. i kassen, og det hele er nemt at gå til</p></div>
             <a class="button pink crop wide ae-7" href="javascript:void(0)" data-cb-type="checkout" data-cb-plan-id="foodbox">Tilmeld FoodBOX</a>
           </div>
         </div>
