--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
 		
 
 		<!-- Styles -->
-		<link href="css/slides.css" rel="stylesheet" type="text/css">
+		<link href="css/slides.min.css" rel="stylesheet" type="text/css">
 
 		<!-- Custom Styles -->
 		<!--link href="css/custom.css" rel="stylesheet" type="text/css"-->
 
 		<!-- Scripts -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-		<script src="js/plugins.js" type="text/javascript" name="plugins"></script>
-		<script src="js/slides.js" type="text/javascript" name="main-scripts"></script>
+		<script src="js/slides.min.js" type="text/javascript" name="main-scripts"></script>
     <script src="https://js.chargebee.com/v2/chargebee.js" data-cb-site="foodtv" ></script>
 
 		<!-- Custom Scripts -->
