--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 <li class="col-6-12 ae-6">
                   <i class="material-icons">slideshow</i>
                   <h3>Opskrifter med video</h3>
-                  <p class="small">Du får altid et par opskrifter der passer til kassens indhold og link til video fra FoodTV.</p>
+                  <p class="small">Du får altid opskrifter der passer til kassens indhold og link til video fra FoodTV.</p>
                 </li>
                 <li class="col-6-12 ae-7">
                   <i class="material-icons">local_cafe</i>
