--- a/index.html
+++ b/index.html
@@ -133,6 +133,25 @@
   </div>
 </nav>
 
+<!-- Panel Top #01 -->
+<nav class="panel top forceMobileView">
+  <div class="sections desktop">
+    <div class="left"><a href="https://foodtv.dk" title="Brand Name"><img src="assets/img/foodtv.png" style="width:100px;"></a></div>
+    <div class="center">
+      <ul class="menu">
+        <li><a href="#kassen">Kassens indhold</a></li>
+        <li><a href="#suppliers">Mærker</a></li>
+        <li><a href="#ditte">Næste kasse</a></li>
+      </ul>
+    </div>
+    <div class="right"> <a class="button menuButton round" href="javascript:void(0)" data-cb-type="checkout" data-cb-plan-id="foodbox">Tilmeld</a> </div>
+  </div>
+  <div class="sections compact hidden">
+    <div class="left"><a href="#" title="Brand Name"><svg style="width:107px;height:31px"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg></a></div>
+    <div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
+  </div>
+</nav>
+
 <!-- Slide 1 (#78) -->
 <section class="slide fade kenBurns">
   <div class="content">
@@ -142,11 +161,11 @@
         <div class="fix-10-12">
           <div class="h1 ae-1"><svg class="wide"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg></div>
           <div class="ae-2">
-            <p class="hero">En kasse direkte til døren hver måned med håndplukkede lækkerier og køkkenudstyr fra landets bedste kokke. Det er ikke fancy, men vejen til bedre hverdagsmad.</p>
+            <p class="hero">En kasse direkte til døren hver måned med håndplukkede lækkerier og køkkenudstyr fra landets bedste kokke på FoodTV. Det er ikke fancy, men vejen til bedre hverdagsmad.</p>
           </div>
           <a class="button pink ae-3" href="javascript:void(0)" data-cb-type="checkout" data-cb-plan-id="foodbox">Jeg er på!</a><a href="#mere" class="button white ae-4">Fortæl mig mere</a>
           <div class="ae-10 fromRight">
-            <p class="small">Vi tager 89 kr. pr. kasse inkl. fragt til døren. Der er altid værdi for mindst 850 kr. i kassen.</p>
+            <p class="small">Vi tager 129 kr. pr. kasse inkl. fragt til døren, prisen er helt særligt 89 kr. for juni måned.</p>
           </div>
         </div>
           
@@ -166,7 +185,7 @@
           <ul class="flex fixedSpaces verticalCenter reverse">
             <li class="col-7-12 left middle">
               <h1 class="big ae-1 fromLeft">Fra video-opskrifter til madlavnings-kasser</h1>
-              <div class="ae-2 fromLeft"><p class="hero">Vi startede FoodTV.dk for et par år siden og har nu 80.000 glade brugere. Vi vil nu tage skridtet videre fra video-opskrifterne og hver måned sammensætte en kasse i samarbejde med vores kokke. FoodBOX indeholder det, der inspirerer kokkene i deres hverdag samt ting, de ikke kan undvære i køkkenet.</p></div>
+              <div class="ae-2 fromLeft"><p class="hero">Vi startede FoodTV for at gøre det nemmere at lave god hverdagsmad. Vi vil nu tage skridtet videre fra video-opskrifter og hver måned sammensætte en kasse i samarbejde med vores kokke. FoodBOX indeholder det, der inspirerer kokkene i deres hverdag samt ting, de ikke kan undvære i køkkenet.</p></div>
               <a class="button pink ae-3 fromCenter" href="javascript:void(0)" data-cb-type="checkout" data-cb-plan-id="foodbox">Okay, jeg er på!</a><a class="button white ae-4 fromCenter" href="#kassen">Hvad er der i den kasse?</a>
             </li>
             <li class="col-5-12">
@@ -191,27 +210,27 @@
           <ul class="flex verticalCenter reverse">
             <li class="col-6-12 left">
               <h1 class="ae-2">Håndplukkede lækkerier</h1>
-              <div class="ae-3"><p>Vi har i samarbejde med foodtvs dedikerede kokke udvalgt de bedste ingredienser og udstyr, som de selv bruger i hverdagen.</p></div>
+              <div class="ae-3"><p>Vi har i samarbejde med FoodTV's dedikerede kokke udvalgt de bedste ingredienser og udstyr, som de selv bruger i hverdagen.</p></div>
               <ul class="flex grid-62 later">
                 <li class="col-6-12 ae-4">
-                  <i class="material-icons">local_dining</i>
-                  <h3>Hverdagsting</h3>
-                  <p class="small">Den gode opvaskebørste, viskestykke eller vandflaske. Ting du ikke kan få for mange af.</p>
+                  <i class="material-icons">slideshow</i>
+                  <h3>To video-opskrifter</h3>
+                  <p class="small">Kokken har lavet to opskrifter på video til netop denne kasse, samt skrevet en personlig hilsen.</p>
                 </li>
                 <li class="col-6-12 ae-5">
                   <i class="material-icons">kitchen</i>
-                  <h3>Ingredienser og udstyr</h3>
-                  <p class="small">Vi pakker de bedste råvarer og køkkenudstyr til dig, så du nemt kan lave opskrifterne.</p>
+                  <h3>Udvalgte ingredienser</h3>
+                  <p class="small">Opskrifterne indeholder ingredienser det kan være svært at få fat på, så dem får du med.</p>
                 </li>
                 <li class="col-6-12 ae-6">
-                  <i class="material-icons">slideshow</i>
-                  <h3>Opskrifter med video</h3>
-                  <p class="small">Du får altid opskrifter der passer til kassens indhold og link til video fra FoodTV.</p>
+                  <i class="material-icons">local_dining</i>
+                  <h3>Lækkert udstyr</h3>
+                  <p class="small">Køkkenudstyr som kokken elsker selv og tror du vil gøre det samme.</p>
                 </li>
                 <li class="col-6-12 ae-7">
                   <i class="material-icons">local_cafe</i>
-                  <h3>Overraskelser</h3>
-                  <p class="small">Lækre ting til at forsøde hverdagen, måske chokolade eller kaffe?</p>
+                  <h3>Hverdagsting</h3>
+                  <p class="small">Det kunne være den gode opvaskebørste eller kaffekop.</p>
                 </li>
               </ul>
             </li>
@@ -265,7 +284,7 @@
             <li class="col-2-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1">
               <div class="table wide equalElement ae-6">
                 <div class="cell">
-                  <img width="124" src="assets/img/electrolux.png" alt="Electrolux"/>
+                  <img width="124" src="assets/img/zwilling.png" alt="Zwilling"/>
                 </div>
               </div>
             </li>
@@ -362,7 +381,7 @@
           <div class="pad shadow margin-top-6 ae-3 ">
             <div class="price sourceSans ae-4">89 kr.</div>
             <h3 class="big ae-5">pr. måned (ingen binding)</h3>
-            <div class="ae-6"><p class="small">Du får altid værdi for over 850 kr. i kassen, og det hele er nemt at gå til</p></div>
+            <div class="ae-6"><p class="small">Du får altid værdi for over 850 kr. Prisen er efter 1. juni 129 kr. pr. måned.</p></div>
             <a class="button pink crop wide ae-7" href="javascript:void(0)" data-cb-type="checkout" data-cb-plan-id="foodbox">Tilmeld FoodBOX</a>
           </div>
         </div>
