--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
             </li>
             <li class="col-6-12">
                             <div class="box-81 equalElement left ae-3">
-                <p class="light ae-5">Jeg elsker at bage, og håber, at jeg kan inspirere dig til at prøve noget nyt. I juni skal du prøve dig med en lækker moussekage og nogle nemme chokoladeboller.</p>
+                <p class="light ae-5">Jeg elsker at bage, og håber, at jeg kan inspirere dig til at prøve noget nyt. I juni skal du prøve dig med en lækker moussekage og en super nem hjemmelavet granola.</p>
                 <div class="author-81">
                   <p class="small bold ae-6">Ditte Julie Jensen</p>
                   <p class="small cropBottom ae-7">kendt fra Den Store Bagedyst</p>
