--- a/index.html
+++ b/index.html
@@ -220,12 +220,12 @@
                 <li class="col-6-12 ae-5">
                   <i class="material-icons">kitchen</i>
                   <h3>Udvalgte ingredienser</h3>
-                  <p class="small">Opskrifterne indeholder ingredienser det kan være svært at få fat på, så dem får du med.</p>
+                  <p class="small">Opskrifterne indeholder ingredienser, det kan være svært at få fat på, så dem får du med.</p>
                 </li>
                 <li class="col-6-12 ae-6">
                   <i class="material-icons">local_dining</i>
                   <h3>Lækkert udstyr</h3>
-                  <p class="small">Køkkenudstyr som kokken elsker selv og tror du vil gøre det samme.</p>
+                  <p class="small">Køkkenudstyr som kokken elsker selv, og vi håber, du vil gøre det samme.</p>
                 </li>
                 <li class="col-6-12 ae-7">
                   <i class="material-icons">local_cafe</i>
